--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/main.js\""
+    "dev": "concurrently \"tsc -w\" \"node dist/main.js\""
   },
   "keywords": [],
   "author": "",
